# Finflow-Trading

./: .gitignore  README.md
finflow/frontend/my-app/: .env.example  package.json
finflow/frontend/my-app/src/: App.tsx
finflow/frontend/my-app/src/pages/: Dashboard.tsx  EconomicCalendar.tsx  Leaderboard.tsx  Portfolio.tsx  TradingInstruments.tsx
finflow/frontend/my-app/src/services/: api.ts
finflow/frontend/my-app/src/types/: index.ts  index.tsx
finflow/infrastructure/: docker-compose.yml
finflow/infrastructure/database/: indexes.sql  schema.sql  seed.sql
finflow/services/analytics-service/: Dockerfile  dump.rdb  requirements.txt
finflow/services/analytics-service/app/: main.py
finflow/services/analytics-service/app/api/: analytics.py  health.py
finflow/services/analytics-service/tests/: conftest.py  test_api.py
finflow/services/api-gateway/: .env.example  go.mod  go.sum  test_ratelimit.sh
finflow/services/api-gateway/cmd/: main.go
finflow/services/api-gateway/internal/config/: config.go
finflow/services/api-gateway/internal/handlers/: health.go  proxy.go
finflow/services/api-gateway/internal/middleware/: CORS.go  logger.go  ratelimit.go  requestid.go
finflow/services/portfolio-service/: .factorypath  pom.xml
finflow/services/portfolio-service/.bloop/: portfolio-service-test.json  portfolio-service.json
finflow/services/portfolio-service/.metals/: metals.lock.db
finflow/services/trading-engine/: CMakeLists.txt
finflow/services/trading-engine/src/orderbook/: main.cpp  order.cpp  order.h  orderbook.cpp  orderbook.h
(+96 files in other folders)
